# op_trAIder

./: .coverage  .dockerignore  .env  .env.example  .eslintrc.security.js  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .prettierrc.js  .qlty.toml  .trivyignore  .trivyignore.yaml  CHANGELOG.md  CONTRIBUTING.md  DEDUPLICATION_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  IMPORT_SHADOWING_FIX_SUMMARY.md  QLTY_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_IMMEDIATE_ACTION_PLAN.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TRADING_LOGIC_COVERAGE_ACHIEVEMENT_REPORT.md  analyze_market_data_coverage.py  backend-health-check-results.json  commitlint.config.js  coverage-fixed.json  coverage-fresh.json  coverage-gap-analysis.md  coverage-improvement-summary.md  coverage.json  database.py  docker-compose.dev.yml  docker-compose.yml  env.example  eslint.config.mjs  lint-staged.config.js  middleware.ts  mypy.ini  (+21 more)
.github/: SECURITY.md  codeql-config.yml  dependabot.yml
.husky/: commit-msg  pre-commit
_docs/: action_items.md
adr/: ADR-018-market-data-service.md  adr-001-documentation-automation.md  adr-002-pre-commit-hooks.md  adr-003-security-workflow-fixes.md  adr-005-nextjs-version-upgrade.md  adr-006-environment-consolidation.md  adr-012-codeql-sonar-workflow-fixes.md  adr-015-pytest-ruff-pipeline-fix.md  adr-017-monorepo-reorganization-and-pnpm-adoption.md  template.md
api/: README.md  __init__.py
app/: layout.tsx  middleware.ts  page.tsx  postcss.config.js  providers.tsx  tsconfig.json  vitest.config.ts
apps/: __init__.py
backend/: .coverage  (+13 more)
(+9620 files in other folders)
