[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traider"
version = "0.1.0"
description = "TRAIDER V1 autonomous trading platform backend"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TRAIDER Team", email = "support@traider.ai" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["backend*"] 